# MessagingSystem

./: CMakeLists.txt
include/: AbstractMessage.h  ChatMessageData.h  GetHistoryMessage.h  GetHistoryResponseMessage.h  JsonSerializable.h  MessageType.h  MessageUtils.h  NewChatMessageData.h  NotificationMessage.h  NotificationType.h  Result.h  SendMessageMessage.h  SendMessageResponseMessage.h  SimpleMessage.h  utils.h
src/: AbstractMessage.cpp  ChatMessageData.cpp  GetHistoryMessage.cpp  GetHistoryResponseMessage.cpp  JsonSerializable.cpp  MessageType.cpp  MessageUtils.cpp  NewChatMessageData.cpp  NotificationMessage.cpp  NotificationType.cpp  Result.cpp  SendMessageMessage.cpp  SendMessageResponseMessage.cpp  SimpleMessage.cpp
